--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
 .wrapper {
 	display: grid;
 	max-width: 1024px;	
-	grid-template-rows: 20% auto 260px;
+	grid-template-rows: 20% auto 30%;
 	grid-template-areas: "header" "section" "footer";
 	margin: 0 auto;	
 }
