--- a/css/style.css
+++ b/css/style.css
@@ -1,40 +1,17 @@
 @charset "UTF-8";
-/* Body */
 body {
-	margin: 0;
-	font-family: 'Ubuntu', "Arial", sans-serif;
+	margin: 0px;
+	font-family: "Ubuntu", "Arial", sans-serif;
 	font-size: 20px;
-	background-color: #FFFFFF;
 }
-/* Container */
 .wrapper {
 	display: grid;
 	max-width: 1024px;	
-	grid-template-rows: 20% auto 30%;
+	grid-template-rows: auto;
 	grid-template-areas: "header" "section" "footer";
 	margin: 0 auto;	
-}
-/* Header */
-header {
-	display: grid;
-	grid-template-rows: 20% auto 20%;
-	grid-template-areas: . "nav" .;
-	color: black;
-	background-color: #ffffff;
-	border-top: 1px solid #37A000;
-}
-/*Navigation*/
-nav {
-	display: grid;
-	position: fixed;
-	right:18px;
-	font-size:2em;
-	text-decoration: none;
-}
-nav a {
-	margin-top: 1em;
-	text-decoration: none;
-	color: orange;
+	border-top: 3px solid #37A000;
+	border-radius: 4px;
 }
 .logo {
 	margin-left: auto;
@@ -45,92 +22,35 @@ nav a {
 	font-weight: bold;
 	font-size: 22px;
 }
-.hero_header {
-	color: #FFFFFF;
-	text-align: center;
-	letter-spacing: 4px;
+.face {
+	border-radius: 50%;
 }
-/* About Section */
-.summory {
-	float: left;
-	padding-left: 20px;
-	padding-right: 20px;
-	width: 90%;
-	text-align: left;
-	font-weight: lighter;
-	line-height: 25px;	
+nav{
+	display: grid;
+	position: fixed;
+	right:18px;
+	font-size:2em;
+	text-decoration: none;
 }
-.summory li {
-	margin-bottom: 1em;
+nav a {
+	margin-top: 1em;
+	color: #FFA500;
 }
-.gallery {
-	clear: both;
-	display: inline-block;	
-	padding-bottom: 35px;
-	padding-top: 0px;
-	margin-top: -5px;
-	margin-bottom: 0px;
-	width: 100%;
-	background-color: #FFFFFF;
-}
-.thumbnail {
-	width: 48%;
-	float: left;
-	margin-top: 35px;
-	padding-bottom: 20px;
-	margin-left: 1%;
-	margin-right: 1%;
-	border-radius: 3px;
-	padding-top: 20px;
-	border-bottom: 4px solid #37A000;
-	background-color: #F0F0F0;
-	text-align: center;
-}
-.gallery .thumbnail h4 {
-	padding-left: 20px;
-	padding-right: 20px;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	color: #37A000;
-	text-align: left;
+section {
 
 }
-.gallery .thumbnail p {
-	padding-left: 20px;
-	margin: 0;
-	color: #000000;
-	text-align: left;
-
-}
-/* More info */
 .intro {
 	display: grid;
-	grid-template-columns: 50% 50%;
-	justify-items: stretch;
-	align-items: stretch;
-	border-radius:4px;
-	background-color:#37A000;
-}
-.column {
-	padding-top: 30px;	
-	text-align: center;	
-}
-.intro .column h3 {
+	grid-template-columns: 5fr 6fr;
 	color: #FFFFFF;
 	text-align: center;
-}
-.cards {
-	width: 100%;
-	height: auto;
-	max-width: 600px;
-	max-height: 375px;
-	opacity: 0.8;
+	background-color: #37A000;
+
 }
 .intro .column p {
 	margin-left: 20px;
 	margin-right: 20px;
 	padding: 0 1em 30px 1em;
-	width: 80%;
 	border-left: 3px solid white;
 	border-radius: 4px;
 	text-align: justify;
@@ -140,6 +60,50 @@ nav a {
 }
 .intro .column p i{
 	margin-right: 2em;
+	padding: 1em;
+}
+.summory {
+	width: 95%;
+	margin: 0 auto;
+
+}
+.summory p {
+
+}
+.gallery {
+	display: grid;
+	grid-template-columns: 50% 50%;
+	grid-template-rows: auto auto;
+	grid-gap: 0px;
+}
+figure {
+	background-color: #F0F0F0;
+	border-bottom: 3px solid #37A000;
+	border-radius: 4px;
+	text-align: center;
+}
+figure img {
+	max-width: 100%;
+	height: auto;
+}
+figcaption {
+	text-align: center;
+}
+figcaption h4 {
+	padding-left: 20px;
+	padding-right: 20px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	color: #37A000;
+	text-align: left;
+
+}
+figcaption p {
+	padding-left: 20px;
+	margin: 0;
+	color: #000000;
+	text-align: left;
+
 }
 .button {
 	width: 200px;
@@ -165,34 +129,23 @@ nav a {
 	color: #FFFFFF;
 }
 footer {
+	text-align: center;
 	background-color: #B3B3B3;
 }
-
-.profile {
-	border-radius: 50%
-}
-.gallery .thumbnail .tag {
-	padding: 4px 20px;
-	color: #37A000;
-	text-align: left;
-}
-
 @media (max-width: 1096px) {
-.thumbnail {
-	width: 98%;
-}
-.summory {
-	margin: 0;
-	padding: 20px;
-	width: 90%;
+nav {
+	font-size: 3em;
 }
 .intro {
 	grid-template-columns: 100%;
-	grid-template-rows: 50% 50%; 
 }
-.profile {
-    border-radius: 50%;
+.face { 
     width: 40%;
     height: auto;
+    border-radius: 50%;
+}
+.gallery {
+	display: grid;
+	grid-template-columns: 100%;
 }
 }
